{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 18,
  "lineage": "f0651038-588e-d141-dc24-63343f1d3174",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "136.112.36.156",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-01-10T21:13:13.670-08:00",
            "id": "projects/nimble-factor-478021-b4/regions/us-central1/addresses/lemonai-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "lemonai-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "nimble-factor-478021-b4",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nimble-factor-478021-b4/regions/us-central1/addresses/lemonai-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/nimble-factor-478021-b4/zones/us-central1-a/instances/lemonai-vm"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-10T21:12:54.005-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/nimble-factor-478021-b4/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/nimble-factor-478021-b4/global/networks/default",
            "priority": 1000,
            "project": "nimble-factor-478021-b4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nimble-factor-478021-b4/global/firewalls/allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "lemonai-public"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-10T21:12:53.374-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/nimble-factor-478021-b4/global/firewalls/allow-ssh-admin",
            "log_config": [],
            "name": "allow-ssh-admin",
            "network": "https://www.googleapis.com/compute/v1/projects/nimble-factor-478021-b4/global/networks/default",
            "priority": 1000,
            "project": "nimble-factor-478021-b4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nimble-factor-478021-b4/global/firewalls/allow-ssh-admin",
            "source_ranges": [
              "98.228.216.14/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "lemonai-public"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251218",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/nimble-factor-478021-b4/zones/us-central1-a/disks/lemonai-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/nimble-factor-478021-b4/zones/us-central1-a/instances/lemonai-vm",
            "instance_id": "7993424338442162074",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "startup-script": "#!/bin/bash\nset -e\n\n# --- Configuration ---\nSWAP_SIZE=\"1\"\nBASIC_AUTH_USER=\"admin\"\nBASIC_AUTH_PASS=\"L3m0n@i_S3cur3_P@ss_2026!\"\nSTATIC_IP=\"136.112.36.156\"\nLEMON_IMAGE=\"hexdolemonai/lemon:latest\"\n\n# --- Install Docker ---\necho \"Installing Docker...\"\napt-get update\napt-get install -y ca-certificates curl gnupg lsb-release\nmkdir -p /etc/apt/keyrings\ncurl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/ [...]
            },
            "metadata_fingerprint": "3y49UXojFn0=",
            "name": "lemonai-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "136.112.36.156",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/nimble-factor-478021-b4/global/networks/default",
                "network_ip": "10.128.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/nimble-factor-478021-b4/regions/us-central1/subnetworks/default",
                "subnetwork_project": "nimble-factor-478021-b4"
              }
            ],
            "project": "nimble-factor-478021-b4",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/nimble-factor-478021-b4/zones/us-central1-a/instances/lemonai-vm",
            "service_account": [
              {
                "email": "lemonai-sa@nimble-factor-478021-b4.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "lemonai-public"
            ],
            "tags_fingerprint": "SpPCFnVoBFg=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "metadata"
              },
              {
                "type": "index",
                "value": {
                  "value": "startup-script",
                  "type": "string"
                }
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.static_ip",
            "google_project_service.apis",
            "google_service_account.lemon_sa"
          ]
        }
      ]
    }
  ]
}